syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

 

message Jwk {
  string id = 1;
  string client_id = 3;
  google.protobuf.Any jwk = 8;
  repeated string scopes = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message GetJwksRequest {}